--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Running Horusec Security
       run: |
         curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-        horusec start -D -e="true" -p ./ --disable-docker="true"
+        horusec start -D -e="true" -p ./ --disable-docker="true" -s="CRITICAL"
   
   push_to_registry:
     name: Push Docker image to Docker Hub
